removed tabs